# prela

./: #prela.lyx#  .gitignore  10a.prl  10b.prl  10c.prl  11a.prl  11b.prl  11c.prl  11d.prl  12a.prl  12b.prl  12c.prl  13a.prl  13b.prl  13c.prl  13d.prl  14a.prl  14b.prl  14c.prl  15a.prl  15b.prl  15c.prl  15d.prl  16a.prl  16b.prl  16c.prl  16d.prl  17a.prl  17b.prl  17c.prl  17d.prl  17e.prl  17f.prl  18a.prl  18b.prl  18c.prl  19a.prl  19b.prl  19c.prl  19d.prl  (+101 more)
rust/: CONVERT.md  Cargo.toml  TRANSLATION.md
rust/bench/: compare_idiomatic_optimized.py  plot_job.py  plot_job_mt.py  plot_tpch.py  plot_tpch10_mt.py  regen_tpch_oracles.sh  rewrite_job_prela_schema.py  run_job_duck.sh  run_job_duck_mt.sh  run_job_prela_schema.sh
rust/bench/data/: ddbcheat.txt  duckdb_st.txt  idiomatic.txt  idiomatic_median10.txt  idiomatic_median15.txt  idiomatic_min10.txt  idiomatic_min15.txt  idiomatic_optimized_median15.txt  idiomatic_optimized_min15.txt  job_duck.txt  job_duck.txt.predicate-transfer.bak  job_duck_canonical.txt  job_duck_mt.txt  job_prela_schema.txt  job_qnames.txt  job_rust.txt  job_rust_mt.txt  julia_job.txt  julia_tpch.txt  julia_tpch_idiomatic.txt  julia_tpch_optimized.txt  optimized.txt  optimized_idiomatic_median10.txt  (+7 more)
rust/experiments/: member_prod.md  pull_vs_push.md  typed_schema.md
rust/schema-proc/: Cargo.toml
rust/src/: .engine.rs.swp  cache.rs  data.rs  engine.rs  entity.rs  format.rs  job_schema.rs  lib.rs  main.rs  par.rs  pull.rs  pull_next.rs  schema.rs  schema_experiment.rs  schema_proc.rs  schema_simpl.rs  tpch_data.rs  tpch_queries.rs  tpch_queries_ddbcheat.rs  tpch_queries_idiomatic.rs  tpch_queries_optimized.rs  tpch_schema.rs  tpch_schema_proc.rs
(+111 files in other folders)
